fixed issue of having gap in projects

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -170,7 +170,6 @@ body {
     height: 100%;
     box-shadow: 0 0 55px rgba(0, 0, 0, 1);
     object-fit: cover;
-    z-index: 1000;
 }
 
 .project-1 img {
